Change circular button and add new button color

--- a/main/main.css
+++ b/main/main.css
@@ -204,6 +204,7 @@ body {
     transition: .2s ease-in-out;
     font-size: 1rem;    /* for non <a> element */
     font-weight: 600;   /* for non <a> element */
+    height: fit-content;
 }
 .btn a {
     font-size: 1rem;
@@ -294,12 +295,30 @@ body {
 }
 
 
+/* no-background */
+.no-back-btn {
+  color: var(--d-pri-c);
+}
+.no-back-btn a {
+    color: var(--d-pri-c);
+}
+.no-back-btn:hover {
+    background: var(--back-neu-c-hover);
+}
+
+
+
 /*  ----------------------
     Circular Button
     ---------------------- */
 .m-circle-btn {
-    padding: 1rem;
+    padding: .7rem;
 }
+.m-circle-btn a i,
+.m-circle-btn i {
+    font-size: 1.4rem;
+}
+
 .s-circle-btn {
     padding: .5rem;
     font-size: 0;
@@ -317,6 +336,9 @@ body {
 .w-50 {
     width: 50%;
 }
+
+
+
 
 /* modal.css | v1.0 */
 
