--- a/main/main.css
+++ b/main/main.css
@@ -1,3 +1,50 @@
+/* root.css | Default css variables */
+
+:root {
+  /* ----------------------
+      Colors v1.0
+  ---------------------- */
+
+  /* -- Interactive */
+  /* ---- accent */
+  --pri-c: #9fe870;
+  --pri-c-hover: #80e142;
+  --pri-c-active: #65cf21;
+
+  /* ---- control */
+  --d-pri-c: #163300;
+  --d-pri-c-hover: #0d1f00;
+  --d-pri-c-active: #0e0f0c;
+
+  /* ---- negative */
+  --negative-c: #e74848;
+  --negative-c-hover: #d03238;
+  --negative-c-active: #bf1e2c;
+
+  /* ---- neutral */
+  --neu-c: #e2f6d5;
+  --neu-c-hover: #d3f2c0;
+  --neu-c-active: #c5edab;
+
+  /* ---- negative sentement */
+  --negative-c: #a8200d;
+  --negative-c-hover: #8e1b0b;
+
+  /* -- Background */
+  --back-neu-c: rgba(64, 98, 128, 8%);
+  --back-neu-c-hover: rgba(22, 51, 0, 8%);
+  --back-neu-c-active: rgba(22, 51, 0, 12%);
+
+  /* -- Border */
+  --border-neu-c: rgba(14, 15, 12, 12%);
+
+  /* -- Base */
+  --white: #fff;
+  --dark: #121511;
+}
+
+
+
 /* reset.css | A lightweight CSS Reset */
 
 /* 1. Set box-sizing globally */
@@ -62,46 +109,7 @@ table {
   border-spacing: 0;
 }
 
-/* root.css | Default css variables */
 
-:root {
-  /* ----------------------
-      Colors v1.0
-  ---------------------- */
-
-  /* -- Interactive */
-  /* ---- accent */
-  --pri-c: #9fe870;
-  --pri-c-hover: #80e142;
-  --pri-c-active: #65cf21;
-
-  /* ---- control */
-  --d-pri-c: #163300;
-  --d-pri-c-hover: #0d1f00;
-  --d-pri-c-active: #0e0f0c;
-
-  /* ---- negative */
-  --negative-c: #e74848;
-  --negative-c-hover: #d03238;
-  --negative-c-active: #bf1e2c;
-
-  /* ---- neutral */
-  --neu-c: #e2f6d5;
-  --neu-c-hover: #d3f2c0;
-  --neu-c-active: #c5edab;
-
-  /* ---- negative sentement */
-  --negative-c: #a8200d;
-  --negative-c-hover: #8e1b0b;
-
-  /* -- Background */
-  --back-neu-c: rgba(64, 98, 128, 8%);
-  --back-neu-c-hover: rgba(22, 51, 0, 8%);
-
-  /* -- Base */
-  --white: #fff;
-  --dark: #121511;
-}
 
 /* typography.css | Base typography settings */
 
@@ -337,6 +345,27 @@ body {
     width: 50%;
 }
 
+
+
+/* chip button | Buttons for labels and small action */
+
+.chip-btn {
+  outline: 1px solid var(--border-neu-c);
+  padding: 0.125rem 0.875rem;
+  font-size: .875rem;
+  color: var(--d-pri-c);
+  transition: .2s ease-in-out;
+}
+.chip-btn a {
+  font-size: .875rem;
+  color: var(--d-pri-c);
+}
+.chip-btn:hover {
+  background: var(--back-neu-c-hover);
+}
+.chip-btn:active {
+  background: var(--back-neu-c-active);
+}
 
 
 
