--- a/main/main.css
+++ b/main/main.css
@@ -1,3 +1,5 @@
+/* ==== Base ==== */
+
 /* root.css | Default css variables */
 
 :root {
@@ -200,6 +202,11 @@ body {
     background-color: #ddd;
     margin: 2rem 0;
   }
+
+
+
+/* ==== Component ==== */
+
 
   /* button.css | Different button states */
 
@@ -469,3 +476,63 @@ body {
     opacity: 1;
     transform: translateY(-10px);
   }
+
+
+  /* ==== Utilities ==== */
+
+  /* container css | adjusted for every width */
+
+/* Base styles */
+.container, 
+.container-sm, 
+.container-md, 
+.container-lg, 
+.container-xl, 
+.container-xxl, 
+.container-fluid {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* Small (≥576px) */
+@media (min-width: 576px) {
+  .container, .container-sm {
+    max-width: 540px;
+  }
+}
+
+/* Medium (≥768px) */
+@media (min-width: 768px) {
+  .container, .container-sm, .container-md {
+    max-width: 720px;
+  }
+}
+
+/* Large (≥992px) */
+@media (min-width: 992px) {
+  .container, .container-sm, .container-md, .container-lg {
+    max-width: 960px;
+  }
+}
+
+/* Extra Large (≥1200px) */
+@media (min-width: 1200px) {
+  .container, .container-sm, .container-md, .container-lg, .container-xl {
+    max-width: 1140px;
+  }
+}
+
+/* Extra Extra Large (≥1400px) */
+@media (min-width: 1400px) {
+  .container, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
+    max-width: 1320px;
+  }
+}
+
+/* Fluid Container */
+.container-fluid {
+  max-width: 100%;
+}
